style(color): fixed wrong color. Gray, not black
affects: @fremtind/jkl-select

ISSUES CLOSED: 1759

--- a/packages/select/select.scss
+++ b/packages/select/select.scss
@@ -14,7 +14,7 @@ $arrow-width: rem(13px);
 
 $select-border-color: $svart;
 $select-text-color: $svart;
-$select-text-disabled-color: $svart;
+$select-text-disabled-color: $gra-60;
 $select-background-color: $hvit;
 $select-open-background-color: $hvit;
 $select-focus-color: $info;
